Fix filter shifting bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,6 +52,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
   scroll-behavior: smooth;
 }
 
@@ -59,6 +60,7 @@ body {
   color: var(--lightest-grey);
   /* background: var(--grey); */
   background: var(--grey);
+  
 }
 
 .text-hover:hover {
